# todo-demo

./: .gitmodules
app/: package.json  pnpm-lock.yaml
app/src/: main.ts  todo-screen.ts
gtk/: CMakeLists.txt
gtk/packaging/: launch.sh
gtk/packaging/rpm/: app.spec
gtk/src/: main.cxx
macOS/: project.yml
macOS/TodoPoly/: AppDelegate.swift
